--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "bugs": {
     "url": "https://github.com/CityDataHack/AlternativeTreatment/issues"
   },
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "path": "^0.12.7"
   }
 }
