--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "bugs": {
     "url": "https://github.com/CityDataHack/AlternativeTreatment/issues"
   },
-  "main": "app/index.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "devDependencies": {},
   "dependencies": {
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "path": "^0.12.7"
