--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,11 @@
   "scripts": {
     "start": "node app.js"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.23.6",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1"
+  },
   "dependencies": {
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
