add functioning call to Dialogflow API

--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "gulp-nodemon": "^2.2.1"
   },
   "dependencies": {
+    "apiai": "^4.0.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
