--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^2.0.4"
   }
 }
