--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "apiai": "^4.0.3",
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
